--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <nav class="c-menu l-header__menu">
           <ul class="c-menu__list">
             <li class="c-menu__item">
-              <a href="./" class="c-menu__link">Главная</a>
+              <a href="./" class="c-menu__link c-menu__link--activ">Главная</a>
             </li>
             <li class="c-menu__item">
               <a href="./page/service.html" class="c-menu__link">Услуги</a>
