--- a/course_2/index.html
+++ b/course_2/index.html
@@ -13,7 +13,7 @@
 <body>
   <div class="wrapper">
 
-    <!-- <div class="hero">
+    <div class="hero">
       <header class="header container">
     
         <a href="#" class="logo">
@@ -95,7 +95,7 @@
 
         </div>
       </div>
-    </div> -->
+    </div>
     
     <section class="advantages">
       <div class="advantages__container container">
