--- a/course_2/index.html
+++ b/course_2/index.html
@@ -7,7 +7,7 @@
   <title>Document</title>
   <link href="https://fonts.googleapis.com/css2?family=Play:wght@400;700&display=swap" rel="stylesheet">
   <link href="./css/normalize.css" rel="stylesheet">
-  <link href="./css/main.css" rel="stylesheet">
+  <link href="./css/main.min.css" rel="stylesheet">
 </head>
 
 <body>
