--- a/course_2/index.html
+++ b/course_2/index.html
@@ -152,7 +152,7 @@
       </div>
     </section>
     
-    <!-- <section class="products">
+    <section class="products">
       <div class="container">
         <ul class="products__list">
           <li class="products__item">
@@ -165,7 +165,7 @@
           </li>
         </ul>
       </div>
-    </section> -->
+    </section>
     
     <!-- <section class="team">
       <div class="container">
